Polishing.
Remove unused imports.
Simplify if & switch statements.
Use Set.of, List.of for unmodifiable collections.
Remove redundant usage of semicolon.
Fix broken references in Javadoc.